Hardware version info missing
Vendor request to display hardware version in Settings -> About phone.
Adding preference to display the info.

YAM-394

Change-Id: I820c6974b542a0fb8920258482b94f011826b603

--- a/res/values/cm_strings.xml
+++ b/res/values/cm_strings.xml
@@ -1402,4 +1402,7 @@
     <string name="keep_screen_on_charging">While charging</string>
 
     <string name="quick_settings_reset_message">Reset quick settings tiles?</string>
+
+    <string name="hardware_version_title">Hardware version</string>
+    <string name="hardware_version_value" translatable="false"></string>
 </resources>
