--- a/res/anim/pac_logo_anim_1.xml
+++ b/res/anim/pac_logo_anim_1.xml
@@ -20,7 +20,7 @@
     <objectAnimator
         android:duration="@integer/pac_logo_duration"
         android:propertyName="fillColor"
-        android:valueFrom="@color/pac_logo_black"
+        android:valueFrom="@color/text_color_black"
         android:valueTo="@color/pac_logo_green"
         />
     <objectAnimator
@@ -45,6 +45,6 @@
         android:duration="@integer/pac_logo_duration"
         android:propertyName="fillColor"
         android:valueFrom="@color/pac_logo_blue"
-        android:valueTo="@color/pac_logo_black"
+        android:valueTo="@color/text_color_black"
         />
 </set>
