--- a/res/drawable/pac_logo.xml
+++ b/res/drawable/pac_logo.xml
@@ -22,33 +22,33 @@
 
     <path
         android:name="p"
-        android:fillColor="@color/pac_logo_black"
+        android:fillColor="@color/text_color_black"
         android:pathData="M13,5 A7.49,7.49,0,0,0,6.76,8.36 L6.76,5 L5.51,5 L5.51,25 L6.76,25 L6.76,16.64
 A7.5,7.5,0,1,0,13,5 Z M13,18.75 A6.25,6.25,0,1,1,19.25,12.5
 A6.25,6.25,0,0,1,13,18.75 Z" />
     <path
         android:name="a"
-        android:fillColor="@color/pac_logo_black"
+        android:fillColor="@color/text_color_black"
         android:pathData="M35.76,5 L35.76,8.36 A7.5,7.5,0,1,0,35.76,16.64 L35.76,20 L37,20 L37,5 L35.76,5
 Z M29.51,18.75 A6.25,6.25,0,1,1,35.76,12.5 A6.25,6.25,0,0,1,29.51,18.75 Z" />
     <path
         android:name="c"
-        android:fillColor="@color/pac_logo_black"
+        android:fillColor="@color/text_color_black"
         android:pathData="M39.76,12.5 A6.25,6.25,0,0,0,46,18.75 L53.5,18.75 L53.5,20 L46,20
 A7.5,7.5,0,0,1,46,5 L53.5,5 L53.5,6.25 L46,6.25 A6.25,6.25,0,0,0,39.76,12.5 Z" />
     <path
         android:name="r"
-        android:fillColor="@color/pac_logo_black"
+        android:fillColor="@color/text_color_black"
         android:pathData="M60.5,5 L60.5,6.25 A4.25,4.25,0,0,0,56.25,10.5 L56.25,20 L55,20 L55,5 L56.25,5
 L56.25,7 A5.49,5.49,0,0,1,60.5,5 Z" />
     <path
         android:name="o"
-        android:fillColor="@color/pac_logo_black"
+        android:fillColor="@color/text_color_black"
         android:pathData="M69.49,5 A7.5,7.5,0,1,0,77,12.5 A7.5,7.5,0,0,0,69.49,5 Z M69.49,18.75
 A6.25,6.25,0,1,1,75.74,12.5 A6.25,6.25,0,0,1,69.49,18.75 Z" />
     <path
         android:name="m"
-        android:fillColor="@color/pac_logo_black"
+        android:fillColor="@color/text_color_black"
         android:pathData="M94.49,10 L94.49,20 L93.24,20 L93.24,10 A3.73,3.73,0,0,0,86.49,7.77
 A3.74,3.74,0,0,0,79.74,10 L79.74,20 L78.49,20 L78.49,10 A5,5,0,0,1,86.49,6
 A5,5,0,0,1,94.49,10 Z M85.87,6.91 L87.12,6.91 L87.12,20 L85.87,20 L85.87,6.91 Z" />
